--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@ main #container{
 }
 }
 
+@media screen and (max-width: 500px) {
+	main #container {
+        background-size:50%;
+        width: 80%;
+        height: 60%;
+	}
+	main{
+    margin: auto;
+    width: 70%;
+    height: 400px;
+      
+
+}
+}
+
 @keyframes band{
     0% {transform: rotateY(1deg);}
     20% {transform: rotateY(5deg);}
@@ -107,6 +122,21 @@ main #container{
 }
 
 @media screen and (max-width: 800px) {
+	.clip H1{
+    margin-top: 50%;
+    font-size: 7.5vw;
+    color: red;   
+
+   
+}
+.clip H2{
+    text-align: center;
+    margin-top: 10%;
+    font-size:5vw;
+}
+}
+
+@media screen and (max-width: 500px) {
 	.clip H1{
     margin-top: 50%;
     font-size: 7.5vw;
