Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -138,8 +138,13 @@ h1{
     <main>
         
         <div class="clip" id="container">
-            <h2>Líderes do Futuro</h2>
+
+           <div class="hh2">
+              <h2>Líderes do Futuro</h2>
+           </div>
+           <div class="hh1">
             <h1>E.P.O.C.C.A</h1>
+           </div>
         </div>
 
     </main>
