Atualizar o index.html
alteração class

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@ main #container{
     0% 85% );
 }
 
-.clip H2{
+.hh2 H2{
     text-align: center;
     margin-top: 5%;
     font-size:5vw;
 }
 
-.clip H1{
+.hh1 H1{
     margin-top: 40%;
     font-size: 7vw;
     color: red;   
@@ -107,14 +107,14 @@ main #container{
 }
 
 @media screen and (max-width: 768px) {
-	.clip H1{
+.chh1 H1{
     margin-top: 60%;
     font-size: 7.5vw;
     color: red;   
 
    
 }
-.clip H2{
+.hh2 H2{
     text-align: center;
     margin-top: 10%;
     font-size:5vw;
