Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body{
 
 main{
     margin: auto;
-    width: 80%;
+    width: 70%;
     height: 400px;   
 
 }
@@ -109,7 +109,7 @@ main #container{
    
 }
 .meio{
-   
+   text-align: center;
     height: 27%;
 }
 
