Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@ main{
 }
 .hh2 H2{
     text-align: center;
-    margin-top: 10%;
+    margin-top: 13%;
     font-size:5vw;
     color: red;
 }
  img{
-    margin: auto;
+    border: solid 2px;
     height: 35%;  
     
 
