Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ main #container{
         width: 80%;
         height: 100%;
 	}
-	main{
+ img{
     margin: auto;
-    width: 80%;
-    height: 220px;
+    width: 40%;
+    height: 30%;
       
 
 }
