--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ main #container{
      
 
     transform-origin:left;
-    animation: band 5s infinite ease-in-out;
+    animation: bandeira 5s infinite ease-in-out;
        
 }
 
@@ -62,7 +62,7 @@ main #container{
 
 
 
-@keyframes band{
+@keyframes bandeira{
     0% {transform: rotateY(1deg);}
     20% {transform: rotateY(5deg);}
     40% {transform: rotateY(-5deg);}
