--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@ main #container{
    
 }
 
-.foto
+.foto{
+    text-align: center;
+    margin: auto;
+}
 img{
-   text-align: center;
-   width: 30%;
+    text-align: center;
+    width: 30%;
     height: 27%;
 }
 
@@ -126,7 +129,7 @@ main{
 }
     
 .hh1 H1{
-    
+    margin-top: 30%;
     font-size: 7.5vw;
     color: rgb(16, 71, 221);
    
@@ -144,7 +147,8 @@ main{
 
 }
 .foto{
-margin: auto;
+    text-align: center;    
+    margin: auto;
 }
 }
 
