--- a/index.html
+++ b/index.html
@@ -233,7 +233,21 @@ h1{
                 <p>Auditoria</p>
             
             </div>
-            <div class="face1"></div>
+            <div class="face1">
+                <img src="./ing/cartao.JPG" alt="" style="background-image: url(./ing/cartao.JPG);">
+                <p>Analista</p>
+                <p>Cartão</p>
+            </div>
+            <div class="face1">
+                <img src="#" alt="">
+                <p>Leda</p>
+                <p>Supervisora</p>
+            </div>
+            <div class="face1">
+                <img src="#" alt="">
+                <p>Luiz</p>
+                <p>Líder</p>
+            </div>
             
 
         </div>
